--- a/Tarea1/Tarea1.csproj
+++ b/Tarea1/Tarea1.csproj
@@ -170,6 +170,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Formulario.cshtml" />
+    <Content Include="Views\Home\InfoGato.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
